--- a/client/src/pages/internautepages/pagescss/fields.scss
+++ b/client/src/pages/internautepages/pagescss/fields.scss
@@ -135,6 +135,7 @@
                 }
                 .continentf{
                     gap: .5rem;
+                    width: 30rem;
 
                   
                     .namef{
