--- a/client/src/components/comment/comment.scss
+++ b/client/src/components/comment/comment.scss
@@ -72,7 +72,8 @@
 border: none;     
 background: transparent;  
 color: var(--blackColor2); 
-transform: translate(33rem,-1.5rem);
+transform: translate(29.3rem,-1.5rem);
+margin-right: 1rem;
 &:hover{
     color: var(--mmr);
 }
