--- a/client/src/pages/internautepages/pagescss/profile.scss
+++ b/client/src/pages/internautepages/pagescss/profile.scss
@@ -156,11 +156,10 @@
     }
 
     .uper {
-        color: #bebebe;
+        color: orange;
         font-weight: 500;
         font-size: 20px;
         ;
-        align-self: center;
-        transform: translateY(-430px)translateX(380px);
+        transform: translate(8rem,-1rem);
     }
 }
