--- a/client/src/components/dash/dashside.scss
+++ b/client/src/components/dash/dashside.scss
@@ -28,14 +28,11 @@
 .sidsection{
 
     width: 11rem; 
-    height:46rem;
-  
-    border-right: solid white 5px;
+    height: 45.62rem;     border-right: solid white 5px;
     border-bottom:solid white    2px; ;
-    background: rgb(40, 40, 40);;
+    background: hsl(173, 82%, 24%);
 
-
-
+margin-top: -2rem;
     border-bottom-right-radius:2rem ;
 
     .sidebaritems{
@@ -47,14 +44,14 @@
 
     
         margin-right: 1rem;
-        margin-top: 1.5rem;
+        margin-top: 2rem;
         display: block;
         .imgproff{
             border: 4.5px solid white;
             border-radius:50rem;
             width: 5.8rem;
-            transform: translate(0.5rem,0.5rem);
-            margin-bottom: 2rem;
+            transform: translate(0.5rem,2rem);
+            margin-bottom: 4rem;
         }
 
 
